--- a/next-typescript-app/app/index.css
+++ b/next-typescript-app/app/index.css
@@ -163,6 +163,9 @@ body {
 }
 
 .btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: inherit;
   font-family: inherit;
   border: none;
